--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="style1.css">
-<script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=qUC1lEaQ3qdIyBjz9akfHquCjtPBTN3a6Bv4w-ySRENO5wviur9d6MK-R7naH5p7EoOV8zmREm4yIOFEXmrrJQ" charset="UTF-8"></script>
+<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=qUC1lEaQ3qdIyBjz9akfHquCjtPBTN3a6Bv4w-ySRENO5wviur9d6MK-R7naH5p7EoOV8zmREm4yIOFEXmrrJQ" charset="UTF-8"></script>
 <script type="text/javascript" src="script.js"></script>
 <title>操作画面</title>
 <script type="text/javascript" charset="UTF-8"></script>
