--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="style1.css">
-<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=qUC1lEaQ3qdIyBjz9akfHquCjtPBTN3a6Bv4w-ySRENO5wviur9d6MK-R7naH5p7EoOV8zmREm4yIOFEXmrrJQ" charset="UTF-8"></script>
+<script type="text/javascript" src="main.js"></script>
+
 <script type="text/javascript" src="script.js"></script>
 <title>操作画面</title>
 <script type="text/javascript" charset="UTF-8"></script>
@@ -602,7 +603,7 @@ function refresh_rate()
       const signals = document.getElementsByClassName("signal");
 
       for (let i = 0; i < 16; i++){
-        if (di_data[i] == "ON") {
+        if (do_data[i] == "ON") {
           signals[i].classList.remove('undrive');
         } else {
           signals[i].classList.add('undrive');
