--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 	</table>
 </div>
 
-<script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=claGT_hutrPHXelBWdNlvMw16B_nbq7JCr8csL8prcgivhujWZVUEme_EcdvWeOehd5bjnAZeiIvYFc3MuAShw" charset="UTF-8"></script>
+<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=claGT_hutrPHXelBWdNlvMw16B_nbq7JCr8csL8prcgivhujWZVUEme_EcdvWeOehd5bjnAZeiIvYFc3MuAShw" charset="UTF-8"></script>
 <script type="text/javascript" src="button_enable.js"></script>
 <script type="text/javascript" src="data_do.js"></script>
 <script type="text/javascript" src="button_event.js"></script>
