--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html><head><title>岩田プランテック&#x20;DL8</title>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <meta name="viewport" content="width=1024">
-<LINK REL="stylesheet" TYPE="text/css" HREF="common.css">
+<LINK REL="stylesheet" TYPE="text/css" HREF="common.css">	
+<script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=claGT_hutrPHXelBWdNlvMw16B_nbq7JCr8csL8prcgivhujWZVUEme_EcdvWeOehd5bjnAZeiIvYFc3MuAShw" charset="UTF-8"></script>
+<script type="text/javascript" src="button_enable.js"></script>
+<script type="text/javascript" src="data_do.js"></script>
+<script type="text/javascript" src="button_event.js"></script>
+<script type="text/javascript" src="xml_cmd.js" ></script>
+
 
 <style type="text/css">
 .table_header{
@@ -363,12 +369,6 @@
       </tbody>
 	</table>
 </div>
-
-<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=claGT_hutrPHXelBWdNlvMw16B_nbq7JCr8csL8prcgivhujWZVUEme_EcdvWeOehd5bjnAZeiIvYFc3MuAShw" charset="UTF-8"></script>
-<script type="text/javascript" src="button_enable.js"></script>
-<script type="text/javascript" src="data_do.js"></script>
-<script type="text/javascript" src="button_event.js"></script>
-<script type="text/javascript" src="xml_cmd.js" ></script>
 
 </body>
 </html>
